Update examples for Asylo 0.3.1 release

--- a/grpc_server/BUILD
+++ b/grpc_server/BUILD
@@ -48,6 +48,7 @@ cc_library(
     deps = [
         ":translator_server_grpc_proto",
         "@com_github_grpc_grpc//:grpc++",
+        "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/strings",
     ],
 )
