--- a/hello_world/BUILD
+++ b/hello_world/BUILD
@@ -44,6 +44,7 @@ sim_enclave(
         ":hello_proto_cc",
         "@com_google_absl//absl/strings",
         "@com_google_asylo//asylo:enclave_runtime",
+        "@com_google_asylo//asylo/util:logging",
         "@com_google_asylo//asylo/util:status",
     ],
 )
