--- a/.bazelrc
+++ b/.bazelrc
@@ -18,7 +18,7 @@ build:sgx --crosstool_top=@com_google_asylo_sgx_backend//toolchain:crosstool
 build:sgx --dynamic_mode=off
 build:sgx --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
 build:sgx --fission=no
-build:sgx --custom_malloc=@com_google_asylo_sgx_backend//toolchain:crosstool
+build:sgx --custom_malloc=@com_google_asylo_sgx_backend//toolchain:malloc
 build:sgx --define=SGX_SIM=0
 build:sgx --define=grpc_no_ares=true
 
@@ -26,7 +26,7 @@ build:sgx-sim --crosstool_top=@com_google_asylo_sgx_backend//toolchain:crosstool
 build:sgx-sim --dynamic_mode=off
 build:sgx-sim --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
 build:sgx-sim --fission=no
-build:sgx-sim --custom_malloc=@com_google_asylo_sgx_backend//toolchain:crosstool
+build:sgx-sim --custom_malloc=@com_google_asylo_sgx_backend//toolchain:malloc
 build:sgx-sim --define=SGX_SIM=1
 build:sgx-sim --define=grpc_no_ares=true
 # The enclave simulation backend currently makes use of the SGX simulator.
