--- a/quickstart/solution/BUILD
+++ b/quickstart/solution/BUILD
@@ -34,11 +34,16 @@ asylo_proto_library(
     deps = ["@com_google_asylo//asylo:enclave_proto"],
 )
 
+cc_proto_library(
+    name = "demo_cc_proto",
+    deps = [":demo_proto"],
+)
+
 sim_enclave(
     name = "demo_enclave",
     srcs = ["demo_enclave.cc"],
     deps = [
-        ":demo_proto_cc",
+        ":demo_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_asylo//asylo:enclave_runtime",
         "@com_google_asylo//asylo/crypto:aes_gcm_siv",
@@ -53,7 +58,7 @@ enclave_loader(
     enclaves = {"enclave": ":demo_enclave"},
     loader_args = ["--enclave_path='{enclave}'"],
     deps = [
-        ":demo_proto_cc",
+        ":demo_cc_proto",
         "@com_github_gflags_gflags//:gflags_nothreads",
         "@com_google_asylo//asylo:enclave_client",
         "@com_google_asylo//asylo/util:logging",
