--- a/hello_world/BUILD
+++ b/hello_world/BUILD
@@ -23,7 +23,6 @@ load(
     "enclave_loader",
     "sim_enclave",
 )
-load("@com_google_asylo//asylo/bazel:proto.bzl", "asylo_proto_library")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -31,7 +30,7 @@ package(
 
 # Example for using the Asylo framework.
 
-asylo_proto_library(
+proto_library(
     name = "hello_proto",
     srcs = ["hello.proto"],
     deps = ["@com_google_asylo//asylo:enclave_proto"],
@@ -61,7 +60,8 @@ enclave_loader(
     loader_args = ["--enclave_path='{enclave}'"],
     deps = [
         ":hello_cc_proto",
-        "@com_github_gflags_gflags//:gflags_nothreads",
+        "@com_google_absl//absl/flags:flag",
+        "@com_google_absl//absl/flags:parse",
         "@com_google_absl//absl/strings",
         "@com_google_asylo//asylo:enclave_client",
         "@com_google_asylo//asylo/util:logging",
