Update examples for Asylo 0.5.1 release

--- a/grpc_server/BUILD
+++ b/grpc_server/BUILD
@@ -17,13 +17,12 @@
 load(
     "@com_google_asylo//asylo/bazel:asylo.bzl",
     "ASYLO_ALL_BACKEND_TAGS",
+    "cc_unsigned_enclave",
+    "debug_sign_enclave",
     "enclave_loader",
+    "enclave_test",
 )
-load("@com_google_asylo//asylo/bazel:sgx_rules.bzl", "sgx_enclave_test")
-load(
-    "@linux_sgx//:sgx_sdk.bzl",
-    "sgx",
-)
+load("@linux_sgx//:sgx_sdk.bzl", "sgx")
 load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
 
 licenses(["notice"])  # Apache v2.0
@@ -84,9 +83,10 @@ cc_proto_library(
 )
 
 # The enclave hosting the translation server.
-sgx.unsigned_enclave(
+cc_unsigned_enclave(
     name = "grpc_server_enclave_unsigned.so",
     srcs = ["grpc_server_enclave.cc"],
+    backends = sgx.backend_labels,
     deps = [
         ":grpc_server_config_cc_proto",
         ":translator_server_impl",
@@ -102,10 +102,11 @@ sgx.unsigned_enclave(
     ],
 )
 
-sgx.debug_enclave(
+debug_sign_enclave(
     name = "grpc_server_enclave.so",
-    unsigned = "grpc_server_enclave_unsigned.so",
+    backends = sgx.backend_labels,
     config = "@com_google_asylo//asylo/grpc/util:grpc_enclave_config",
+    unsigned = "grpc_server_enclave_unsigned.so",
 )
 
 # The driver for the gRPC server enclave.
@@ -115,39 +116,72 @@ enclave_loader(
     enclaves = {"enclave": ":grpc_server_enclave.so"},
     loader_args = ["--enclave_path='{enclave}'"],
     deps = [
-        ":grpc_server_config_cc_proto",
+        ":grpc_server_util",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
-        "@com_google_asylo//asylo:enclave_cc_proto",
+        "@com_google_absl//absl/time",
         "@com_google_asylo//asylo:enclave_client",
-        "@com_google_asylo//asylo/platform/primitives/sgx:loader_cc_proto",
         "@com_google_asylo//asylo/util:logging",
+        "@com_google_asylo//asylo/util:status",
     ],
 )
 
-# A test of the example using the generated client stubs rather than the gRPC
-# command-line interface.
-sgx_enclave_test(
+cc_library(
+    name = "grpc_server_util",
+    srcs = ["grpc_server_util.cc"],
+    hdrs = ["grpc_server_util.h"],
+    deps = [
+        ":grpc_server_config_cc_proto",
+        "@com_google_absl//absl/strings",
+        "@com_google_asylo//asylo:enclave_cc_proto",
+        "@com_google_asylo//asylo:enclave_client",
+        "@com_google_asylo//asylo/platform/primitives/sgx:loader_cc_proto",
+        "@com_google_asylo//asylo/util:status",
+        "@com_google_protobuf//:protobuf",
+    ],
+)
+
+# A test of the example using the server enclave.
+enclave_test(
     name = "grpc_server_test",
     srcs = ["grpc_server_test.cc"],
-    data = [":grpc_server_host_loader"],
+    backend_dependent_data = [":grpc_server_host_loader"],
+    backends = sgx.backend_labels,
     enclaves = {"server_enclave": ":grpc_server_enclave.so"},
     test_args = [
-        "--enclave_path='{server_enclave}'",
+        "--server_enclave_path='{server_enclave}'",
     ],
     deps = [
-        ":translator_server",
-        "@bazel_tools//tools/cpp/runfiles",
+        ":grpc_server_util",
+        ":translator_client",
+        ":translator_server_impl",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/synchronization",
-        "@com_google_asylo//asylo/test/util:exec_tester",
+        "@com_google_asylo//asylo:enclave_client",
         "@com_google_asylo//asylo/test/util:status_matchers",
         "@com_google_asylo//asylo/test/util:test_main",
+        "@com_google_asylo//asylo/util:path",
         "@com_google_asylo//asylo/util:status",
         "@com_google_googletest//:gtest",
+    ],
+)
+
+cc_library(
+    name = "translator_client",
+    testonly = 1,
+    srcs = ["translator_client.cc"],
+    hdrs = ["translator_client.h"],
+    deps = [
+        "//grpc_server:translator_server",
+        "//grpc_server:translator_server_cc_proto",
+        "@com_github_grpc_grpc//:grpc",
+        "@com_github_grpc_grpc//:grpc++",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
+        "@com_google_asylo//asylo/util:status",
     ],
 )
