--- a/remote/grpc_server/BUILD
+++ b/remote/grpc_server/BUILD
@@ -18,12 +18,9 @@ load(
     "@com_google_asylo//asylo/bazel:asylo.bzl",
     "enclave_loader",
 )
-load(
-    "@linux_sgx//:sgx_sdk.bzl",
-    "sgx",
-)
+load("@linux_sgx//:sgx_sdk.bzl", "sgx")
 
-licenses(["notice"])  # Apache v2.0
+licenses(["notice"])
 
 # Example demonstrating gRPC in Asylo for remote SGX backend.
 
@@ -31,43 +28,19 @@ package(
     default_visibility = ["//visibility:public"],
 )
 
-# The enclave hosting gRPC server.
-sgx.unsigned_enclave(
-    name = "grpc_server_enclave_unsigned.so",
-    srcs = ["grpc_server_enclave.cc"],
-    deps = [
-        "@com_github_grpc_grpc//:grpc++",
-        "@com_github_grpc_grpc//:grpc++_reflection",
-        "@com_google_absl//absl/base:core_headers",
-        "@com_google_absl//absl/memory",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/synchronization",
-        "@com_google_absl//absl/time",
-        "@com_google_asylo//asylo:enclave_runtime",
-        "@com_google_asylo//asylo/examples/grpc_server:grpc_server_config_cc_proto",
-        "@com_google_asylo//asylo/examples/grpc_server:translator_server_impl",
-        "@com_google_asylo//asylo/util:status",
-    ],
-)
-
-sgx.debug_enclave(
-    name = "grpc_server_enclave.so",
-    unsigned = "grpc_server_enclave_unsigned.so",
-    config = "@com_google_asylo//asylo/grpc/util:grpc_enclave_config",
-)
-
 # The driver for the gRPC server enclave.
 enclave_loader(
     name = "grpc_server",
     srcs = ["grpc_server_driver.cc"],
-    enclaves = {"enclave": ":grpc_server_enclave.so"},
+    backends = sgx.backend_labels,  # Has SGX loader dependencies
+    enclaves = {"enclave": "//grpc_server:grpc_server_enclave.so"},
     loader_args = ["--enclave_path='{enclave}'"],
     remote_proxy = "@com_google_asylo//asylo/util/remote:sgx_remote_proxy",
     deps = [
+        "//grpc_server:grpc_server_config_cc_proto",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
         "@com_google_asylo//asylo:enclave_client",
-        "@com_google_asylo//asylo/examples/grpc_server:grpc_server_config_cc_proto",
         "@com_google_asylo//asylo/platform/primitives/sgx:loader_cc_proto",
         "@com_google_asylo//asylo/util:logging",
         "@com_google_asylo//asylo/util:status",
