Update examples for Asylo 0.5.2 release

--- a/hello_world/BUILD
+++ b/hello_world/BUILD
@@ -18,6 +18,8 @@
 
 load("@com_google_asylo//asylo/bazel:asylo.bzl", "cc_unsigned_enclave", "debug_sign_enclave", "enclave_loader")
 load("@linux_sgx//:sgx_sdk.bzl", "sgx")
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@rules_cc//cc:defs.bzl", "cc_proto_library")
 
 licenses(["notice"])
 
