--- a/remote/bouncing_circles/BUILD
+++ b/remote/bouncing_circles/BUILD
@@ -17,12 +17,16 @@
 # Various tests and test data
 
 load("@com_google_asylo//asylo/bazel:copts.bzl", "ASYLO_DEFAULT_COPTS")
-load("@com_google_asylo//asylo/bazel:asylo.bzl", "enclave_loader")
 load(
-    "@linux_sgx//:sgx_sdk.bzl",
-    "sgx_debug_enclave",
-    "sgx_unsigned_enclave",
+    "@com_google_asylo//asylo/bazel:asylo.bzl",
+    "cc_unsigned_enclave",
+    "debug_sign_enclave",
+    "enclave_loader",
 )
+load("@linux_sgx//:sgx_sdk.bzl", "sgx")
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
+load("@rules_cc//cc:defs.bzl", "cc_proto_library")
 
 licenses(["notice"])  # Apache v2.0
 
@@ -69,7 +73,7 @@ cc_proto_library(
     deps = [":circles_proto"],
 )
 
-sgx_unsigned_enclave(
+cc_unsigned_enclave(
     name = "circle_enclave_0_unsigned.so",
     srcs = ["circle_enclave.cc"],
     defines = [
@@ -90,12 +94,12 @@ sgx_unsigned_enclave(
     ],
 )
 
-sgx_debug_enclave(
+debug_sign_enclave(
     name = "circle_enclave_0_debug.so",
     unsigned = ":circle_enclave_0_unsigned.so",
 )
 
-sgx_unsigned_enclave(
+cc_unsigned_enclave(
     name = "circle_enclave_1_unsigned.so",
     srcs = ["circle_enclave.cc"],
     defines = [
@@ -116,12 +120,12 @@ sgx_unsigned_enclave(
     ],
 )
 
-sgx_debug_enclave(
+debug_sign_enclave(
     name = "circle_enclave_1_debug.so",
     unsigned = ":circle_enclave_1_unsigned.so",
 )
 
-sgx_unsigned_enclave(
+cc_unsigned_enclave(
     name = "circle_enclave_2_unsigned.so",
     srcs = ["circle_enclave.cc"],
     defines = [
@@ -142,12 +146,12 @@ sgx_unsigned_enclave(
     ],
 )
 
-sgx_debug_enclave(
+debug_sign_enclave(
     name = "circle_enclave_2_debug.so",
     unsigned = ":circle_enclave_2_unsigned.so",
 )
 
-sgx_unsigned_enclave(
+cc_unsigned_enclave(
     name = "circle_enclave_3_unsigned.so",
     srcs = ["circle_enclave.cc"],
     defines = [
@@ -168,7 +172,7 @@ sgx_unsigned_enclave(
     ],
 )
 
-sgx_debug_enclave(
+debug_sign_enclave(
     name = "circle_enclave_3_debug.so",
     unsigned = ":circle_enclave_3_unsigned.so",
 )
@@ -212,6 +216,7 @@ enclave_loader(
     name = "web_application",
     testonly = True,
     srcs = ["web_application.cc"],
+    backends = sgx.backend_labels,
     enclaves = {
         "circle_enclave_0": ":circle_enclave_0_debug.so",
         "circle_enclave_1": ":circle_enclave_1_debug.so",
