--- a/redis/BUILD
+++ b/redis/BUILD
@@ -15,6 +15,7 @@
 #
 
 load("@com_google_asylo//asylo/bazel:copts.bzl", "ASYLO_DEFAULT_COPTS")
+load("@rules_cc//cc:defs.bzl", "cc_library")
 
 licenses(["notice"])
 
