Update examples for Asylo 0.5.3 release

--- a/quickstart/BUILD
+++ b/quickstart/BUILD
@@ -19,7 +19,7 @@ load("@linux_sgx//:sgx_sdk.bzl", "sgx")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_cc//cc:defs.bzl", "cc_proto_library")
 
-licenses(["notice"])  # Apache v2.0
+licenses(["notice"])
 
 package(
     default_visibility = [
