Update examples for Asylo 0.6.0 release

--- a/redis/BUILD
+++ b/redis/BUILD
@@ -14,15 +14,14 @@
 # limitations under the License.
 #
 
-load("@com_google_asylo//asylo/bazel:copts.bzl", "ASYLO_DEFAULT_COPTS")
-load("@rules_cc//cc:defs.bzl", "cc_library")
 load("@linux_sgx//:sgx_sdk.bzl", "sgx", "sgx_enclave_configuration")
+load("@rules_cc//cc:defs.bzl", "cc_library")
 load(
     "@com_google_asylo//asylo/bazel:asylo.bzl",
     "cc_enclave_binary",
     "enclave_test",
 )
-load("@com_google_asylo//asylo/bazel:asylo_copy_from_host.bzl", "copy_from_host")
+load("@com_google_asylo//asylo/bazel:copts.bzl", "ASYLO_DEFAULT_COPTS")
 
 licenses(["notice"])
 
@@ -36,7 +35,7 @@ cc_library(
         "@com_google_asylo//asylo:enclave_cc_proto",
         "@com_google_asylo//asylo/identity:descriptions",
         "@com_google_asylo//asylo/identity:enclave_assertion_authority_config_cc_proto",
-        "@com_google_asylo//asylo/identity/sgx:sgx_local_assertion_authority_config_cc_proto",
+        "@com_google_asylo//asylo/identity/attestation/sgx:sgx_local_assertion_authority_config_cc_proto",
         "@com_google_asylo//asylo/util:logging",
     ],
 )
@@ -52,26 +51,22 @@ sgx_enclave_configuration(
 cc_enclave_binary(
     name = "asylo_redis",
     application_enclave_config = ":redis_enclave_config",
-    enclave_build_config = "redis_enclave_configuration",
+    enclave_build_config = ":redis_enclave_configuration",
     deps = ["@com_github_antirez_redis//:redis_main"],
-)
-
-copy_from_host(
-    output = "redis_client_host_bin",
-    target = "@com_github_antirez_redis//:redis_cli_bin",
 )
 
 enclave_test(
     name = "redis_test",
     srcs = ["redis_test.cc"],
-    data = [
+    backend_dependent_data = [
         ":asylo_redis_host_loader",
-        ":redis_client_host_bin",
     ],
+    backends = sgx.backend_labels,
+    data = ["@com_github_antirez_redis//:redis_cli_bin"],
     tags = ["exclusive"],
     test_args = [
-        "--server_path=$(location :asylo_redis_host_loader)",
-        "--client_path=$(location :redis_client_host_bin)",
+        "--server_path=$(rootpath :asylo_redis_host_loader)",
+        "--client_path=$(rootpath @com_github_antirez_redis//:redis_cli_bin)",
     ],
     deps = [
         "@bazel_tools//tools/cpp/runfiles",
